samples/_failures_safe/1761551308_f0566a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1d50ce65.c: In function ‘display_stats’:
./samples/SAFE/__tmp_1d50ce65.c:137:12: error: missing terminating " character
  137 |     printf("ERROR count
      |            ^~~~~~~~~~~~
./samples/SAFE/__tmp_1d50ce65.c:137:5: error: expected expression at end of input
  137 |     printf("ERROR count
      |     ^~~~~~
./samples/SAFE/__tmp_1d50ce65.c:137:5: error: expected declaration or statement at end of input
